# teams-live-translate

./: .env.example  .gitignore  README.md  pyproject.toml  teams_live_translate.py
