[project]
name = "teams-live-translate"
version = "0.1.0"
description = "Live-translate incoming Teams audio into a target language via Gemini 3.5 Live Translate"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "soxr>=0.3.7",
]

[project.scripts]
teams-live-translate = "teams_live_translate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Single-module project — package the script file directly.
include = ["teams_live_translate.py"]
